finished aboutMe section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,42 @@
       <div class="heading">
         <img src="./images/duże logo czarne.png" alt="" class="heading__logo" />
       </div>
+
+      <!-- About Me Section -->
+      <section class="aboutMe">
+        <h1 class="aboutMe__title">O mnie</h1>
+
+        <div class="first__row">
+          <div class="main__label">
+            <div class="label first__label">
+              <p class="text">AKWART</p>
+              <p class="text">ONE</p>
+            </div>
+            <div class="label second__label">
+              <p class="end__text">Krzysztof</p>
+              <p class="end__text">Woźniak</p>
+            </div>
+          </div>
+          <img src="./images/zdjęcie pędzel .jpg" alt="" />
+        </div>
+
+        <div class="second__row">
+          <img src="./images/zdjęcie malowanie.jpg" alt="" />
+          <p class="text">
+            Kaligraf,grafik,nauczyciel,artysta....
+            <br />
+
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+            congue dui eget ante interdum, eu viverra odio iaculis. In porta
+            enim non convallis mattis. Vivamus sit amet placerat enim, at
+            tristique massa. Curabitur sollicitudin eros justo, id aliquam diam
+            lacinia sit amet. Maecenas porta, dolor in ultricies tempus, odioec.
+            Maecenas sed pharetra tortor, ac gravida arcu. Fusce vestibulum ante
+            venenatis turpis malesuada varius. Morbi efficitur dolor ac est
+            pretium, commodo porttitor ante varius.
+          </p>
+        </div>
+      </section>
     </div>
   </body>
 </html>
