finished services section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/dist/css/style.css" />
-    <link rel="stylesheet" href="css/main.min.css" />
+    <link rel="stylesheet" href="./dist/css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <script src="/dist/es2015/lightbox.js"></script>
     <!-- masonry end -->
   </head>
@@ -98,7 +98,7 @@
       <!-- Portfolio Section -->
 
       <section class="portfolio">
-        <h1 class="portfolio__title">O mnie</h1>
+        <h1 class="portfolio__title">Portfolio</h1>
         <p class="portfolio__text">
           Nie sposób zliczyć projekty które wyszły spod mojej ręki, są to
           zarówno sesje zdjęciowe, zdobienia ciała, projekty graficzne oraz dużo
@@ -114,7 +114,8 @@
               <img
                 data-description="More Description Here"
                 src="./images/portfolio/malowanienogi.jpg"
-                alt=""
+                alt="body painting photo"
+                title="body painting"
                 class="portfolio__img"
               />
             </li>
@@ -123,97 +124,124 @@
               <img
                 data-description="More Description Here"
                 src="./images/portfolio/białyobrazekzpaletą.jpg"
-                alt=""
+                title="art and caligraphy"
+                alt="art and caligraphy"
                 class="portfolio__img"
               />
             </li>
 
             <li data-item-order="3">
               <img
-                src="./images/portfolio/okulary na kartce.jpg"
-                alt=""
+                src="./images/portfolio/51635282_248843329385234_1966475889093233038_n.jpg"
+                title="art and caligraphy"
+                alt="art and caligraphy"
                 class="portfolio__img"
               />
             </li>
 
             <li data-item-order="4">
               <img
-                src="./images/portfolio/modelka na czarnym tle.jpg"
-                alt=""
-                class="portfolio__img"
-              />
-            </li>
-            <li data-item-order="5">
-              <img
-                src="./images/portfolio/politechnika.jpg"
-                alt=""
+                src="./images/portfolio/może.jpg"
+                alt="photography"
+                title="photography"
                 class="portfolio__img"
               />
             </li>
 
-            <li data-item-order="6">
-              <img
-                src="./images/portfolio/może.jpg"
-                alt=""
-                class="portfolio__img"
-              />
-            </li>
-            <li data-item-order="7">
+            <li data-item-order="5">
               <img
                 src="./images/portfolio/autocad.jpg"
-                alt=""
+                title="art and caligraphy"
+                alt="art and caligraphy"
                 class="portfolio__img"
               />
             </li>
-            <li data-item-order="8">
+            <li data-item-order="6">
               <img
                 src="./images/portfolio/kobietaczerwonewłosy.jpg"
-                alt=""
+                alt="body painting photo"
+                title="body painting nad photography"
+                class="portfolio__img"
+              />
+            </li>
+
+            <li data-item-order="7">
+              <img
+                src="./images/portfolio/lampkanocna.jpg"
+                title="art and caligraphy"
+                alt="art and caligraphy"
+                class="portfolio__img"
+              />
+            </li>
+
+            <li data-item-order="8">
+              <img
+                src="./images/portfolio/serduszkociasteczko.jpg"
+                title="art and caligraphy"
+                alt="art and caligraphy"
                 class="portfolio__img"
               />
             </li>
 
             <li data-item-order="9">
               <img
-                src="./images/portfolio/lampkanocna.jpg"
-                alt=""
+                src="./images/portfolio/okulary na kartce.jpg"
+                title="art and caligraphy"
+                alt="art and caligraphy"
                 class="portfolio__img"
               />
             </li>
 
             <li data-item-order="10">
               <img
-                src="./images/portfolio/serduszkociasteczko.jpg"
-                alt=""
+                src="./images/portfolio/88991862_780875142435810_5385960300868571315_n.jpg"
+                title="art and caligraphy"
+                alt="art and caligraphy"
                 class="portfolio__img"
               />
             </li>
             <li data-item-order="11">
               <img
-                src="./images/portfolio/51635282_248843329385234_1966475889093233038_n.jpg"
-                alt=""
+                src="./images/portfolio/razpodwozem.jpg"
+                title="art and caligraphy"
+                alt="art and caligraphy"
                 class="portfolio__img"
               />
             </li>
+
             <li data-item-order="12">
               <img
-                src="./images/portfolio/88991862_780875142435810_5385960300868571315_n.jpg"
-                alt=""
-                class="portfolio__img"
-              />
-            </li>
-            <li data-item-order="13">
-              <img
-                src="./images/portfolio/razpodwozem.jpg"
-                alt=""
+                src="./images/portfolio/politechnika.jpg"
+                title="computer design and caligraphy"
+                alt="computer design and caligraphy"
                 class="portfolio__img"
               />
             </li>
           </ul>
         </div>
       </section>
+
+      <!-- services section -->
+      <section class="services">
+        <img src="./images/złote logo.jpg" alt="" class="services__img" />
+        <h1 class="services__title">Usługi</h1>
+        <p class="services__text">
+          W moim świecie nie ma rzeczy niemożliwych... <br />Masz ochotę na
+          nietypową sesję zdjęciową? Zapraszam! <br />Potrzebujesz logo i
+          logotyp dla swojej firmy? Lepiej nie mogłeś trafić! <br />Chcesz
+          udekorować jakiś przedmiot? Dla mnie nie ma znaczenia czym lub kim
+          będe się zajmował!<br />
+          Ograniczenia w zamówianieach stanowi Twoja oraz moja wyobraźnie i...
+          zasobność Twojego portfela. <br />Skontaktuj się ze mną a wspólnie
+          ustalimy sczczegóły !
+        </p>
+      </section>
+
+      <section class="cooperation">
+        <h1 class="cooperation__title">Usługi</h1>
+      </section>
     </div>
 
-    <script src="/scripts/masonry.js"></script>
+    <script src="./scripts/masonry.js"></script>
   </body>
 </html>
