finished cooperation section

--- a/index.html
+++ b/index.html
@@ -237,8 +237,41 @@
         </p>
       </section>
 
+      <!-- cooperation section -->
       <section class="cooperation">
-        <h1 class="cooperation__title">Usługi</h1>
+        <h1 class="cooperation__title">Współpraca</h1>
+        <div class="cooperation__container">
+          <p class="cooperation__text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Consequuntur similique aliquid tempora reiciendis magnam quis
+            inventore quas ipsam vel adipisci eligendi beatae, eum velit unde,
+            porro laborum corrupti facere rerum? Lorem ipsum dolor sit amet
+            consectetur, adipisicing elit. Consequuntur similique aliquid
+            tempora reiciendis magnam quis inventore quas ipsam vel adipisci
+            eligendi beatae, eum velit unde, porro laborum corrupti facere
+            rerum?
+          </p>
+          <img
+            src="./images/nissan backstage.jpg"
+            alt=""
+            class="cooperation__img"
+          />
+          <img
+            src="./images/malowanieokna.jpg"
+            alt=""
+            class="cooperation__img"
+          />
+          <p class="cooperation__text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Consequuntur similique aliquid tempora reiciendis magnam quis
+            inventore quas ipsam vel adipisci eligendi beatae, eum velit unde,
+            porro laborum corrupti facere rerum? Lorem ipsum dolor sit amet
+            consectetur, adipisicing elit. Consequuntur similique aliquid
+            tempora reiciendis magnam quis inventore quas ipsam vel adipisci
+            eligendi beatae, eum velit unde, porro laborum corrupti facere
+            rerum?
+          </p>
+        </div>
       </section>
     </div>
 
