finished desktop view

--- a/index.html
+++ b/index.html
@@ -273,8 +273,73 @@
           </p>
         </div>
       </section>
+
+      <section class="contact">
+        <div class="particles" id="particles-js"></div>
+
+        <div class="contact__container">
+          <h1 class="contact__title">Kontakt</h1>
+          <div class="contact__container">
+            <div class="container__media">
+              <ul class="media__list">
+                <li class="list__position">
+                  <a href="instagram.com/Akwartone"
+                    ><img src="./images/icon_instagram.png" alt="" />
+                    <span>instagram.com/Akwartone</span>
+                  </a>
+                </li>
+                <li class="list__position">
+                  <a href="facebook.com/Akwartone"
+                    ><img src="./images/icon_facebook.png" alt="" />
+                    <span>facebook.com/Akwartone</span></a
+                  >
+                </li>
+                <li class="list__position">
+                  <a href="twitter.com/Akwartone"
+                    ><img src="./images/icon_twitter.png" alt="" />
+                    <span> twitter.com/Akwartone</span></a
+                  >
+                </li>
+                <li class="list__position">
+                  <a href="akwartone@gmail.com"
+                    ><img src="./images/icon_gmail.png" alt="" />
+                    <span> akwartone@gmail.com</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="container__form">
+              <form action="" class="form__content">
+                <input
+                  type="text"
+                  name="name"
+                  class="form__input short"
+                  id="formName"
+                  placeholder="Imię i nazwisko"
+                />
+                <input
+                  type="text"
+                  name="email"
+                  class="form__input short"
+                  id="formEmail"
+                  placeholder="Adres e-mail"
+                />
+                <textarea
+                  name="body"
+                  class="form__textarea"
+                  id="formBody"
+                  placeholder="Treść wiadomości"
+                ></textarea>
+                <button class="form__button ">Wyślij</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <script src="./scripts/masonry.js"></script>
+    <script src="./scripts/particles.js"></script>
+    <script src="./scripts/app.js"></script>
   </body>
 </html>
