finished mobile view menu and contact section

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
             <li data-item-order="12">
               <img
-                src="./images/portfolio/politechnika.jpg"
+                src="./images/portfolio/politechnika.png"
                 title="computer design and caligraphy"
                 alt="computer design and caligraphy"
                 class="portfolio__img"
@@ -264,7 +264,7 @@
       <section class="contact">
         <div class="particles" id="particles-js"></div>
 
-        <div class="contact__container">
+        <div class="contact__wrapper">
           <h1 class="contact__title">Kontakt</h1>
           <div class="contact__container">
             <div class="container__media">
