finished portfolio mobile section

--- a/index.html
+++ b/index.html
@@ -70,14 +70,21 @@
             Kaligraf,grafik,nauczyciel,artysta....
             <br />
 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-            congue dui eget ante interdum, eu viverra odio iaculis. In porta
-            enim non convallis mattis. Vivamus sit amet placerat enim, at
-            tristique massa. Curabitur sollicitudin eros justo, id aliquam diam
-            lacinia sit amet. Maecenas porta, dolor in ultricies tempus, odioec.
-            Maecenas sed pharetra tortor, ac gravida arcu. Fusce vestibulum ante
-            venenatis turpis malesuada varius. Morbi efficitur dolor ac est
-            pretium, commodo porttitor ante varius.
+            Przygodę z kaligrafią zacząłem w wieku 13 lat, a powodem który mnie
+            do tego nakierował była... dysgrafia :) Przepisywałem całe książki
+            do zeszytów. Od dziecka miałem w sobie duszę artysty, lubiłem
+            oglądać programy, gdzie pokazywane były stare dokumenty i rysunki.
+            Postanowiłem pójść dalej i zacząłem szukać w internecie informacji o
+            kaligrafii. Wówczas w Polsce były tylko trzy książki o niej, w
+            dodatku trudno dostępne. W internecie natrafiłem na filmiki Adama
+            Romualda Kłodeckiego oraz stronę Grzegorza Barasińskiego. Z biegiem
+            czasu zacząłem odkrywać nowe style, dopracowywać je i łączyć. Tak
+            powstały moje własne style, czyli kaligrafika i callimpresja. Stały
+            się moim znakiem rozpoznawczym. Callim-presja polega na używaniu
+            różnej wielkości krojów, małych i dużych liter, które zamknięte są w
+            figurze geometrycznej. - Z daleka wszystko się zlewa w jedną całość,
+            wygląda jak plama. Im bliżej jesteśmy pracy, tym możemy więcej
+            dostrzec, odczytać.
           </p>
         </div>
       </section>
@@ -228,14 +235,13 @@
         <h1 class="cooperation__title">Współpraca</h1>
         <div class="cooperation__container">
           <p class="cooperation__text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Consequuntur similique aliquid tempora reiciendis magnam quis
-            inventore quas ipsam vel adipisci eligendi beatae, eum velit unde,
-            porro laborum corrupti facere rerum? Lorem ipsum dolor sit amet
-            consectetur, adipisicing elit. Consequuntur similique aliquid
-            tempora reiciendis magnam quis inventore quas ipsam vel adipisci
-            eligendi beatae, eum velit unde, porro laborum corrupti facere
-            rerum?
+            Moje wieloletnie doświadczenie pozwoliło mi ukształtować pewien
+            schemat dobrych rozwiązań oraz adaptacji do nowego środowisko
+            artystycznego. Jestem otwarty na krótsze oraz dłuższe propozycje
+            współpracy, które zaowocują dobrze zrealizowanymi planami w miłej
+            atmosferze. Jeśli Twój biznes dopiero raczkuje, to zapraszam do
+            kontaktu, forma współpracy barterowej również jest do rozważenia po
+            przedstawieniu szczegółów oraz planu działania.
           </p>
           <img
             src="./images/nissan backstage.jpg"
@@ -248,14 +254,14 @@
             class="cooperation__img"
           />
           <p class="cooperation__text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Consequuntur similique aliquid tempora reiciendis magnam quis
-            inventore quas ipsam vel adipisci eligendi beatae, eum velit unde,
-            porro laborum corrupti facere rerum? Lorem ipsum dolor sit amet
-            consectetur, adipisicing elit. Consequuntur similique aliquid
-            tempora reiciendis magnam quis inventore quas ipsam vel adipisci
-            eligendi beatae, eum velit unde, porro laborum corrupti facere
-            rerum?
+            W swojej karierze miałem do czynienia z wieloma zleceniami,
+            nauczyłem się kreować sztukę w miejscach w których była ona
+            niespodziewana, a obiekty które na pierwszy rzut oka nie nadawały
+            się do niczego, zostawały głównym obiektem obserwacji pośród
+            lokalnego pejzażu. Jeśli masz dylemat, czy jest sens podjąć się
+            jakiegoś zadania - skontaktuj się ze mną a udowodnię Ci, że przy
+            odrobinie kreatywności można stworzyć naprawdę ciekawe i atrakcyjne
+            wizerunkowo arcydzieła.
           </p>
         </div>
       </section>
