--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="stylesheet" href="./dist/css/style.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <script src="/dist/es2015/lightbox.js"></script>
+    <script src="./dist/es2015/lightbox.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
   </head>
   <body>
