changes to lighten and fasten website loading

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <li data-item-order="2">
               <img
                 data-description="More Description Here"
-                src="./images/portfolio/białyobrazekzpaletą.jpg"
+                src="./images/portfolio/białyobrazekzpaletą.webp"
                 title="art and caligraphy"
                 alt="art and caligraphy"
                 class="portfolio__img"
@@ -152,7 +152,7 @@
             </li>
             <li data-item-order="6">
               <img
-                src="./images/portfolio/kobietaczerwonewłosy.jpg"
+                src="./images/portfolio/kobietaczerwonewłosy.webp"
                 alt="body painting photo"
                 title="body painting nad photography"
                 class="portfolio__img"
@@ -161,7 +161,7 @@
 
             <li data-item-order="7">
               <img
-                src="./images/portfolio/lampkanocna.jpg"
+                src="./images/portfolio/lampkanocna.webp"
                 title="art and caligraphy"
                 alt="art and caligraphy"
                 class="portfolio__img"
@@ -170,7 +170,7 @@
 
             <li data-item-order="8">
               <img
-                src="./images/portfolio/serduszkociasteczko.jpg"
+                src="./images/portfolio/serduszkociasteczko.webp"
                 title="art and caligraphy"
                 alt="art and caligraphy"
                 class="portfolio__img"
@@ -205,7 +205,7 @@
 
             <li data-item-order="12">
               <img
-                src="./images/portfolio/politechnika.png"
+                src="./images/portfolio/politechnika.webp"
                 title="computer design and caligraphy"
                 alt="computer design and caligraphy"
                 class="portfolio__img"
@@ -245,7 +245,7 @@
             przedstawieniu szczegółów oraz planu działania.
           </p>
           <img
-            src="./images/nissan backstage.jpg"
+            src="./images/nissan backstage.webp"
             alt=""
             class="cooperation__img"
           />
