small design changes

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               </ul>
             </div>
             <div class="container__form">
-              <form class="form__content" id="sheet">
+              <form class="form__content" id="form">
                 <input
                   type="text"
                   name="name"
