--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Akwartone</title>
-
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -30,21 +29,24 @@
         <div class="navigation__button">
           <i class="fa fa-bars"></i>
         </div>
-        <div class="navigation-menu">
-          <ul>
-            <li><a href="#aboutMe">O mnie</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#services">Usługi</a></li>
-            <li><a href="#cooperation">Współpraca</a></li>
-            <li><a href="#contact">Kontakt</a></li>
-            <!-- <li><a href="">PRICING</a></li> -->
+        <div class="navigation__menu">
+          <ul class="menu__list">
+            <li class="list__item"><a href="#aboutMe">O mnie</a></li>
+            <li class="list__item"><a href="#portfolio">Portfolio</a></li>
+            <li class="list__item"><a href="#services">Usługi</a></li>
+            <li class="list__item"><a href="#cooperation">Współpraca</a></li>
+            <li class="list__item"><a href="#contact">Kontakt</a></li>
           </ul>
         </div>
       </div>
 
       <!-- Welcome heading -->
       <div class="heading">
-        <img src="./images/duże logo czarne.png" alt="" class="heading__logo" />
+        <img
+          src="./images/duże logo czarne.png"
+          alt="logo heading"
+          class="heading__logo"
+        />
       </div>
 
       <!-- About Me Section -->
@@ -324,7 +326,7 @@
                   id="formBody"
                   placeholder="Treść wiadomości"
                 ></textarea>
-                <button class="form__button ">Wyślij</button>
+                <button class="form__button">Wyślij</button>
               </form>
             </div>
           </div>
